<?xml version="1.0" encoding="utf-8"?>
<!-- Mya Von Behren
     Project 5
     June 6, 2024

     UI design including text, buttons, and images.

     -->

<!-- Insert a scroll view for small phones -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Linear Layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:foregroundGravity="center"
            android:gravity="center"
            android:paddingBottom="5sp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/choose_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/choose_one"
            android:textColor="#000000"
            android:textSize="20sp" />

        <!-- Assign rock, paper, and scissors images to each radio button -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rock_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rock"
                android:button="@null"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/paper_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/paper"
                android:button="@null"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/scissors_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/scissors"
                android:button="@null"
                android:gravity="center" />

        </RadioGroup>

        <!-- Display text side by side using a horizontal linear layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/player_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/computer_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/computer"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- Display images of the player and computer's choices side by side using linear layout and image views -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/player_outcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/paper" />

            <ImageView
                android:id="@+id/computer_outcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/paper" />
        </LinearLayout>

        <!-- Display score text side by side using a horizontal linear layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/player_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player_score"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/computer_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/computer_score"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Play button starts the game -->
        <Button
            android:id="@+id/play_btn"
            android:layout_width="316dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="#000000"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/play_rock_paper_scissors"
            android:textSize="22sp" />

        <!-- Reset button resets the score -->
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="316dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="#000000"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="22sp" />

    </LinearLayout>
</ScrollView>